--- a/templates/results.html
+++ b/templates/results.html
@@ -52,7 +52,7 @@
     <div class="container">
         <h2>Extracted Research Paper Details</h2>
         <p><strong>Uploaded File:</strong> {{ filename }}</p>
-        <h3>Extracted Information:</h3>
+        <h3>Extracted Information</h3>
         <pre>{{ response }}</pre>
         <a href="/">Upload Another Paper</a>
     </div>
